[package]
name = "lagom-wasm"
version = "0.1.0"
authors = ["Peter Mandile <peterm1994@hotmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
hecs = "0.6.0"
js-sys = "0.3.50"
wasm-bindgen = "0.2.73"
cgmath = "0.18"
image = "0.23"

[dependencies.web-sys]
version = "0.3.50"
features = [
    'console',
    'Document',
    'Element',
    'HtmlCanvasElement',
    'HtmlImageElement',
    'Performance',
    'WebGlFramebuffer',
    'WebGl2RenderingContext',
    'WebGlUniformLocation',
    'WebGlBuffer',
    'WebGlProgram',
    'WebGlShader',
    'WebGlVertexArrayObject',
    'WebGlTexture',
    'Window',
]